[package]
name = "whos-this-pokemon"
version = "0.2.0"
authors = ["Álvaro <amoratogorriz@gmail.com>"]
edition = "2021"
description = "Terminal game where the player has to guess the Pokemon given it's Pokedex entry."
repository = "https://github.com/Almogo97/whos-this-pokemon"
readme = "README.md"
keywords = ["pokemon", "game", "guess"]
categories = ["games"]
license = "MIT"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
confy = "0.5.1"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
